--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
     <script async="async" src="_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Welcome to your Jupyter Book" href="intro.html" />
+    <link rel="next" title="&lt;no title&gt;" href="format_metadata.html" />
     <link rel="prev" title="Working Group Goals" href="goals.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="en" />
@@ -242,7 +242,7 @@
         <div class='prev-next-bottom'>
             
     <a class='left-prev' id="prev-link" href="goals.html" title="previous page">Working Group Goals</a>
-    <a class='right-next' id="next-link" href="intro.html" title="next page">Welcome to your Jupyter Book</a>
+    <a class='right-next' id="next-link" href="format_metadata.html" title="next page">&lt;no title&gt;</a>
 
         </div>
         
