deploy: cf6d2285546763e6fb78398a085c20c661cc92dd

--- a/accessing_data.html
+++ b/accessing_data.html
@@ -375,7 +375,9 @@
 <li><p>convenience functions that can be used to, among other things, distribute data catalogs</p></li>
 <li><p>investigate data sources and create plots using a GUI</p></li>
 </ul>
-</div>
+<div class="alert alert-info" role="alert">
+Note: This is a test to see if this renders as a blue alert box!
+</div></div>
 </div>
 </div>
 
