--- a/accessing_data.html
+++ b/accessing_data.html
@@ -381,7 +381,9 @@
 <li><p>investigate data sources and create plots using a GUI</p></li>
 </ul>
 <div class="alert alert-info" role="alert">
-Note: This is a test to see if this renders as a blue alert box!
+<b>For dataset users:</b> if an intake catalog is already set up on your system, then all you need to know if the code to access the dataset you are interested in!
+</div><div class="alert alert-warning" role="alert">
+  <b>For dataset maintainers:</b> more specialized knowledge will be necessary.
 </div></div>
 </div>
 </div>
