deploy: 6f620fd535eea1ea1a9ac96513b1dc60aef932a5

--- a/computations/chunking.html
+++ b/computations/chunking.html
@@ -526,7 +526,7 @@
 <span class="kn">import</span> <span class="nn">numpy</span>
 
 <span class="k">def</span> <span class="nf">draw_chunks</span><span class="p">(</span><span class="n">ax</span><span class="p">,</span> <span class="n">size</span> <span class="o">=</span> <span class="p">(</span><span class="mi">10</span><span class="p">,</span> <span class="mi">8</span><span class="p">),</span> <span class="n">nchunks</span> <span class="o">=</span> <span class="p">(</span><span class="mi">5</span><span class="p">,</span> <span class="mi">2</span><span class="p">),</span> <span class="n">chunk_size</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span> <span class="n">chunk_color</span> <span class="o">=</span> <span class="kc">None</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Draw a chunk diagram</span>
 <span class="sd">    </span>
 <span class="sd">    Args:</span>
