deploy: 0e07d66a2ce9e9aadaf2058b4b31c738ff978bfd

--- a/intro.html
+++ b/intro.html
@@ -129,7 +129,7 @@
 </ul>
 <p class="caption">
  <span class="caption-text">
-  Large-scale data analysis
+  Analysis of large-scale datasets
  </span>
 </p>
 <ul class="nav bd-sidenav">
