--- a/resources/help.html
+++ b/resources/help.html
@@ -129,7 +129,7 @@
 </ul>
 <p class="caption">
  <span class="caption-text">
-  Large-scale data analysis
+  Analysis of large-scale datasets
  </span>
 </p>
 <ul class="nav bd-sidenav">
